[package]
name = "twitchlink"
version = "0.1.0"
authors = ["museun"]
edition = "2018"

[dependencies]
serde_json = "1.0.40"
serde = { version = "1.0.94", features = ["derive"] }
attohttpc = { version = "0.4.1", features = ["json"] }
gumdrop = "0.6.0"
twitchlink = { path = "." }

[profile.release]
lto = true
panic = "abort"
