[package]
name = "twitchlink"
version = "0.1.2"
authors = ["museun"]
edition = "2018"

[dependencies]
serde_json = "1.0.41"
serde = { version = "1.0.102", features = ["derive"] }
attohttpc = { version = "0.4.5", features = ["json"] }
gumdrop = "0.7.0"
thiserror = "1.0.4"
anyhow = "1.0.18"

[profile.release]
lto = true
panic = "abort"
